k8s/manifests/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-web-app
  labels:
    app: go-web-app
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  inressClassName: nginx
  rules:
    - host: go-web-app.example.com
      http:
        paths: "/"
        pathType: Prefix
        backend:
          service:
            name: go-web-app-svc
            port:
              number: 80
